--- a/src/App.css
+++ b/src/App.css
@@ -11,49 +11,88 @@
 
 #myname {
     color: #00B2DF !important;
-
 }
 
 body {
     background-color: #191923 !important;
 }
 
+/* .modal-backdrop {
+    background-color: black;
+} */
 
-.project {
+.my-modal-projects .modal-content {
+    background-color: black;
+}
 
-    border: 1px white solid;
-    border-radius: 5px;
-    padding: 8px;
-    margin: 8px auto;
-    display: inline-block;
+.flip-card {
+    cursor: pointer;
     vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 0.4px rgba(241, 241, 241, 0.908);
+    display: inline-block;
+    margin: auto;
+    background-color: transparent;
+    width: 250px;
+    height: 250px;
+    perspective: 1000px;
+
+    /* Remove this if you don't want the 3D effect */
+}
+
+.flip-card-inner {
+    cursor: pointer;
     position: relative;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+
 }
 
-.project:before {
-    pointer-events: none;
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    border-radius: 15px;
     position: absolute;
-    z-index: -1;
-    content: '';
-    opacity: 0;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform, opacity;
-    transition-property: transform, opacity;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
 }
 
-.project:hover,
-.project:focus,
-.project:active {
-    transform: translateY(5px);
-    box-shadow: 0 0 10px rgba(241, 241, 241, 0.908);
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-card-front>h1 {
+    margin: 5rem 0;
+    font-weight: lighter;
+}
+
+.flip-card-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.flip-card-back>i {
+    cursor: pointer;
+    position: absolute;
+    top: 7rem;
+    left: 7rem;
+    z-index: 1;
+    transform: scale(4);
+
+}
+
+.flip-card-back>i:hover {
+    text-shadow: 0px 0px 1px white;
+    opacity: 0.8;
 }
 
 button.rec-arrow-right,
@@ -253,7 +292,6 @@ button.rec-arrow-left:hover {
 .spanbtx {
     transform: skewX(15deg);
     font-family: 'Ubuntu';
-    font-weight: bold;
 }
 
 .second {
